# 6.096

mit_6.096_lab2/: CMakeLists.txt  main.cpp
mit_6.096_lab3/: geometry.cpp  geometry.h  lab3.cpp  pigLatinify.cpp  piglatin.h
mit_6.096_lab4/: pset4.cpp  pset4.h
